Prevent submit when cakeulating to avoid resetting the form.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function Cakeulate()
 <div class="py-4 text-center">
 <h1>The Cakeulator</h1>
 </div>
-<form id="cakeulator">
+<form id="cakeulator" onsubmit="javascript:return false">
 <div class="form-row justify-content-center py-1">
 <div class="col-sm-2 col-form-label text-right">My recipe makes:</div>
 <div class="col-sm-auto"><input type="number" name="recipe-num-cakes" class="form-control" value="1" min="1" step="1" style="width: 4em" /></div>
